recorrect index.html

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <div class="navbar-innercontainer">
             <span class="nav-logo">My Logo</span>
             <ul class="nav-items">
-                <li class="nav-link">Portfolio</li>
-                <li class="nav-link">About</li>
-                <li class="nav-link">Contact</li>
-                <li class="nav-link"><img src="./Assets/logos/envelope.png" class="icon" alt="" /></li>
+                <li class="nav-link"><a href="#" class="link active">Portfolio</a></li>
+                <li class="nav-link"><a href="#" class="link">About</a></li>
+                <li class="nav-link"><a href="#" class="link">Contact</a></li>
+                <li class="nav-link">
+                    <a href="#"><img src="./Assets/logos/envelope.png" class="icon" alt="" /></a>
+                </li>
             </ul>
             <div class="baricon">
                 <div class="bar"></div>
@@ -28,7 +30,7 @@
     </nav>
     <section class="herosection">
         <div class="textcontainer">
-            <h5 class="h5">Hey There I’m Life.</h5>
+            <h1 class="h5">Hey There I’m Life.</h1>
             <h6 class="h6">I'm a Software Developer</h6>
             <p>
                 I can help you build a product , feature or website Look through some
@@ -37,13 +39,23 @@
             </p>
         </div>
 
-        <div class="icon-container">
-            <img class="icon-image" src="./Assets/logos/Vector.png" alt="" />
-            <img class="icon-image" src="./Assets/logos/linkin.png" alt="" />
-            <img class="icon-image" src="./Assets/logos/fingers.png" alt="" />
-            <img class="icon-image" src="./Assets/logos/twitter.png" alt="" />
-            <img class="icon-image" src="./Assets/logos/letterM.png" alt="" />
-        </div>
+        <ul class="icon-container">
+            <li>
+                <img class="icon-image" src="./Assets/logos/Vector.png" alt="" />
+            </li>
+            <li>
+                <img class="icon-image" src="./Assets/logos/linkin.png" alt="" />
+            </li>
+            <li>
+                <img class="icon-image" src="./Assets/logos/fingers.png" alt="" />
+            </li>
+            <li>
+                <img class="icon-image" src="./Assets/logos/twitter.png" alt="" />
+            </li>
+            <li>
+                <img class="icon-image" src="./Assets/logos/letterM.png" alt="" />
+            </li>
+        </ul>
     </section>
 </body>
 
