add a tag to some links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <section class="herosection">
         <div class="textcontainer">
-            <h1 class="h5">Hey There I’m Life.</h1>
+            <h1 class="h5">Hey There. I’m Life.</h1>
             <h6 class="h6">I'm a Software Developer</h6>
             <p>
                 I can help you build a product , feature or website Look through some
@@ -40,20 +40,20 @@
         </div>
 
         <ul class="icon-container">
-            <li>
-                <img class="icon-image" src="./Assets/logos/Vector.png" alt="" />
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="" /></a>
             </li>
-            <li>
-                <img class="icon-image" src="./Assets/logos/linkin.png" alt="" />
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="" /></a>
             </li>
-            <li>
-                <img class="icon-image" src="./Assets/logos/fingers.png" alt="" />
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="" /></a>
             </li>
-            <li>
-                <img class="icon-image" src="./Assets/logos/twitter.png" alt="" />
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/twitter.png" alt="" /></a>
             </li>
-            <li>
-                <img class="icon-image" src="./Assets/logos/letterM.png" alt="" />
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/letterM.png" alt="" /></a>
             </li>
         </ul>
     </section>
