add index.hmtl to middlesecion-branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- NAVBAR -->
     <nav class="navbar">
         <div class="navbar-innercontainer">
             <span class="nav-logo">My Logo</span>
@@ -57,6 +58,21 @@
             </li>
         </ul>
     </section>
+
+    <!-- MIDDLE SECTION -->
+    <div class="middlesection_container">
+        <div class="container">
+
+            <h2 class="middlesection_header_title">
+                My Recent Works
+            </h2>
+
+            <hr>
+            <img src="./Assets/images/middlesectionimage.png" alt="" width="50">
+        </div>
+
+        </section>
+
 </body>
 
 </html>
