--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <!-- NAVBAR -->
     <nav class="navbar">
         <div class="navbar-innercontainer">
-            <span class="nav-logo">My Logo</span>
+            <span class="nav-logo">LifeSoft</span>
             <ul class="nav-items">
-                <li class="nav-link"><a href="#" class="link active">Portfolio</a></li>
+                <li class="nav-link">
+                    <a href="#" class="link active">Portfolio</a>
+                </li>
                 <li class="nav-link"><a href="#" class="link">About</a></li>
                 <li class="nav-link"><a href="#" class="link">Contact</a></li>
                 <li class="nav-link">
@@ -33,7 +35,7 @@
         <div class="textcontainer">
             <h1 class="h5">Hey There. I’m Life.</h1>
             <h6 class="h6">I'm a Software Developer</h6>
-            <p>
+            <p class="hero-paragraph">
                 I can help you build a product , feature or website Look through some
                 of my work and experience! If you like what you see and have a project
                 you need coded, don’t hesitate to contact me.
@@ -60,19 +62,196 @@
     </section>
 
     <!-- MIDDLE SECTION -->
-    <div class="middlesection_container">
-        <div class="container">
+    <setion class="middlesection">
+        <div class="middlesection-container">
+            <h2 class="middlesection_header_title">My Recent Works</h2>
 
-            <h2 class="middlesection_header_title">
-                My Recent Works
-            </h2>
+            <hr />
+            <img class="middlesection-image" src="./Assets/images/middlesectionimage.png" alt="" />
+        </div>
+    </setion>
+    <!-- MULTIPLES STORIES -->
 
-            <hr>
-            <img src="./Assets/images/middlesectionimage.png" alt="" width="50">
+    <section class="multiples-stories">
+        <div class="multiples-stories_container">
+            <h2 class="multiples-stories_header">Multi-Post Stories</h2>
+            <p class="multiples-stories_paragraph">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard dummy text ever
+                since the 1500s, when an unknown printer took a standard dummy text.
+            </p>
+            <ul class="button-flex">
+                <li><button class="default-btn">CSS</button></li>
+                <li><button class="default-btn">HTML</button></li>
+                <li><button class="default-btn">Bootstrap</button></li>
+                <li><button class="default-btn">Ruby</button></li>
+            </ul>
+            <div class="multiple-btn-container">
+                <button class="primarybtn">See Project</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- PROFESSION ART PRINTING -->
+    <section class="professional_art_printing-section">
+        <div class="professional_art_printing-section-items">
+            <div class="art_print_container">
+                <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                <p class="art_print_paragraph">
+                    A daily selection of privately personalized reads; no accounts or
+                    sign-ups required. Has been the industry's standard.
+                </p>
+                <ul class="art_print_btn_container">
+                    <li><button class="transparent-btn">HTML</button></li>
+                    <li><button class="transparent-btn">Bootstrap</button></li>
+                    <li><button class="transparent-btn">Ruby</button></li>
+                </ul>
+            </div>
+            <div class="art-main-btn-container">
+                <button class="primarybtn">See Project</button>
+            </div>
         </div>
 
+        <div class="professional_art_printing-section-items">
+            <div class="art_print_container">
+                <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                <p class="art_print_paragraph">
+                    A daily selection of privately personalized reads; no accounts or
+                    sign-ups required. Has been the industry's standard.
+                </p>
+                <ul class="art_print_btn_container">
+                    <li><button class="transparent-btn">HTML</button></li>
+                    <li><button class="transparent-btn">Bootstrap</button></li>
+                    <li><button class="transparent-btn">Ruby</button></li>
+                </ul>
+            </div>
+            <div class="art-main-btn-container">
+                <button class="primarybtn">See Project</button>
+            </div>
+        </div>
+
+        <div class="professional_art_printing-section-items">
+            <div class="art_print_container">
+                <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                <p class="art_print_paragraph">
+                    A daily selection of privately personalized reads; no accounts or
+                    sign-ups required. Has been the industry's standard.
+                </p>
+                <ul class="art_print_btn_container">
+                    <li><button class="transparent-btn">HTML</button></li>
+                    <li><button class="transparent-btn">Bootstrap</button></li>
+                    <li><button class="transparent-btn">Ruby</button></li>
+                </ul>
+            </div>
+            <div class="art-main-btn-container">
+                <button class="primarybtn">See Project</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- DARK SECTION -->
+    <section class="dark_section">
+        <!-- ABOUT-ME SECTION -->
+        <section class="aboutme_section">
+            <div class="aboutme_container">
+                <h1 class="aboutme_header_text">About me</h1>
+                <p class="aboutme_paragraph">
+                    Hello I’m a software developer! I can help you build a product ,
+                    feature or website Look through some of my work and experience! If
+                    you like what you see and have a project you need coded, don’t
+                    hesitate to contact me.
+                </p>
+
+                <div class="aboutme_button_container">
+                    <button class="primarybtn">Get my resume</button>
+                </div>
+                <hr class="aboutme_line" />
+            </div>
         </section>
 
+        <!-- SKILL SECTION -->
+        <section class="languages_section">
+            <div class="skills_container">
+                <div class="flex-header">
+                    <img class="header_icon" src="/Assets/logos/Rectangle 55.png" alt="" />
+                    <span class="language_label">Language</span>
+                </div>
+                <ul class="skill_list_ul">
+                    <li class="skill_list">JavaScript</li>
+                    <li class="skill_list">Ruby</li>
+                    <li class="skill_list">Ruby</li>
+                    <li class="skill_list">CSS</li>
+                </ul>
+            </div>
+            <div class="skills_container">
+                <div class="flex-header">
+                    <img class="header_icon" src="/Assets/logos/square.png" alt="" />
+                    <span class="language_label">Frameworks</span>
+                </div>
+                <ul class="skill_list_ul">
+                    <li class="skill_list">React.js</li>
+                    <li class="skill_list">Ruby on Rails</li>
+                    <li class="skill_list">RSpec</li>
+                    <li class="skill_list">Capybara</li>
+                </ul>
+            </div>
+            <div class="skills_container">
+                <div class="flex-header">
+                    <img class="header_icon" src="/Assets/logos/ball.png" alt="" />
+                    <span class="language_label">Skills</span>
+                </div>
+                <ul class="skill_list_ul">
+                    <li class="skill_list">Database Management</li>
+                    <li class="skill_list">Version Control</li>
+                    <li class="skill_list">CLI</li>
+                    <li class="skill_list">API Design</li>
+                    <li class="skill_list">Web Development</li>
+                </ul>
+            </div>
+        </section>
+    </section>
+    <!-- LIGHT SECTION -->
+    <!-- FORM SECTION -->
+    <section class="form_section">
+        <div class="form_section_container">
+            <p class="form_section_text">
+                I'm always <br />
+                interested in hearing about new projects, so if you'd like to chat
+                please get in <br />
+                touch.
+            </p>
+
+            <form class="comment_form">
+                <input class="textinput" type="text" placeholder="Full Name" /> <br />
+                <input class="textinput" type="email" placeholder="Email address" /><br />
+                <textarea class="textinput_textarea" name="" id="" cols="30" rows="8"></textarea>
+            </form>
+            <div class="form_btn_container">
+                <button class="primarybtn">Get in touch</button>
+            </div>
+        </div>
+
+        <hr class="form_section_line" />
+        <div class="form_icon_container">
+            <ul class="icon-container">
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/githubicon.svg" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/linkin.svg" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/fingers.svg" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/bird.svg" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/letterM.svg" alt="" /></a>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
 
 </html>
