redit p class selector name

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="textcontainer">
             <h1 class="h5">Hey There. I’m Life.</h1>
             <h6 class="h6">I'm a Software Developer</h6>
-            <p>
+            <p class="hero-paragraph">
                 I can help you build a product , feature or website Look through some
                 of my work and experience! If you like what you see and have a project
                 you need coded, don’t hesitate to contact me.
