add index.html file

--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="navbar-innercontainer">
-            <span class="nav-logo">LifeSoft</span>
-            <ul class="nav-items">
-                <li class="nav-link"><a href="#" class="link active">Portfolio</a></li>
-                <li class="nav-link"><a href="#" class="link">About</a></li>
-                <li class="nav-link"><a href="#" class="link">Contact</a></li>
-                <li class="nav-link">
-                    <a href="#"><img src="./Assets/logos/envelope.png" class="icon" alt="" /></a>
-                </li>
-            </ul>
-            <div class="baricon">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
+    <!-- NAVBAR -->
+    <header>
+        <nav class="navbar">
+            <div class="navbar-innercontainer">
+                <span class="nav-logo">LifeSoft</span>
+                <ul class="nav-items">
+                    <li class="nav-link">
+                        <a href="#" class="link active">Portfolio</a>
+                    </li>
+                    <li class="nav-link"><a href="#" class="link">About</a></li>
+                    <li class="nav-link"><a href="#" class="link">Contact</a></li>
+                    <li class="nav-link">
+                        <a href="#"><img src="./Assets/logos/envelope.png" class="icon" alt="" /></a>
+                    </li>
+                </ul>
+                <div class="baricon">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
+
     <section class="herosection">
         <div class="textcontainer">
             <h1 class="h5">Hey There. I’m Life.</h1>
@@ -57,7 +63,6 @@
             </li>
         </ul>
     </section>
-
 
     <!-- MIDDLE SECTION -->
     <div class="works">
@@ -252,7 +257,6 @@
             </ul>
         </div>
     </section>
-
 </body>
 
 </html>
