--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto:wght@700&display=swap"
+        rel="stylesheet">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -35,37 +40,39 @@
     </header>
 
     <section class="herosection">
-        <div class="textcontainer">
-            <h1 class="h5">Hey There. I’m Life.</h1>
-            <h6 class="h6">I'm a Software Developer</h6>
-            <p class="hero-paragraph">
-                I can help you build a product , feature or website Look through some
-                of my work and experience! If you like what you see and have a project
-                you need coded, don’t hesitate to contact me.
-            </p>
-        </div>
+        <div class="herosection_content">
+            <div class="textcontainer">
+                <h1 class="h5">Hey There. I’m Life.</h1>
+                <h6 class="h6">I'm a Software Developer</h6>
+                <p class="hero-paragraph">
+                    I can help you build a product , feature or website Look through some
+                    of my work and experience! If you like what you see and have a project
+                    you need coded, don’t hesitate to contact me.
+                </p>
+            </div>
 
-        <ul class="icon-container">
-            <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="" /></a>
-            </li>
-            <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="" /></a>
-            </li>
-            <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="" /></a>
-            </li>
-            <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/twitter.png" alt="" /></a>
-            </li>
-            <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/letterM.png" alt="" /></a>
-            </li>
-        </ul>
+            <ul class="icon-container">
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/twitter.png" alt="" /></a>
+                </li>
+                <li class="icon_link">
+                    <a href="#"><img class="icon-image" src="./Assets/logos/letterM.png" alt="" /></a>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <!-- MIDDLE SECTION -->
-    <div class="works">
+    <section class="works">
         <setion class="middlesection">
             <div class="middlesection-container">
                 <h2 class="middlesection_header_title">My Recent Works</h2>
@@ -73,86 +80,87 @@
                 <hr />
                 <img class="middlesection-image" src="./Assets/images/middlesectionimage.png" alt="" />
             </div>
-        </setion>
-        <!-- MULTIPLES STORIES -->
+            <h3 class="multiples-stories_header">Multi-Post Stories</h3>
+            <p class="multiples-stories_paragraph">A daily selection of privately personalized reads;
+                no accounts or sign-ups required. has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a standard dummy text.
+            </p>
+            <section class="button-flex">
+                <ul class="buttons">
 
-        <section class="multiples-stories">
-            <div class="multiples-stories_container">
-                <h2 class="multiples-stories_header">Multi-Post Stories</h2>
-                <p class="multiples-stories_paragraph">
-                    A daily selection of privately personalized reads; no accounts or
-                    sign-ups required. has been the industry's standard dummy text ever
-                    since the 1500s, when an unknown printer took a standard dummy text.
-                </p>
-                <ul class="button-flex">
                     <li><button class="default-btn">CSS</button></li>
                     <li><button class="default-btn">HTML</button></li>
                     <li><button class="default-btn">Bootstrap</button></li>
                     <li><button class="default-btn">Ruby</button></li>
                 </ul>
-                <div class="multiple-btn-container">
-                    <button class="primarybtn">See Project</button>
-                </div>
+            </section>
+
+            <div class="multiple-btn-container">
+                <button class="smallprimarybtn">See Project</button>
             </div>
+        </setion>
+
+
+
+        <section class="card-section">
+            <!-- PROFESSION ART PRINTING -->
+            <section class="professional_art_printing-section">
+                <div class="professional_art_printing-section-items">
+                    <div class="art_print_container">
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <p class="art_print_paragraph">
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="art_print_btn_container">
+                            <li><button class="transparent-btn">HTML</button></li>
+                            <li><button class="transparent-btn">Bootstrap</button></li>
+                            <li><button class="transparent-btn">Ruby</button></li>
+                        </ul>
+                    </div>
+                    <div class="art-main-btn-container">
+                        <button class="primarybtn">See Project</button>
+                    </div>
+                </div>
+
+                <div class="professional_art_printing-section-items">
+                    <div class="art_print_container">
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <p class="art_print_paragraph">
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="art_print_btn_container">
+                            <li><button class="transparent-btn">HTML</button></li>
+                            <li><button class="transparent-btn">Bootstrap</button></li>
+                            <li><button class="transparent-btn">Ruby</button></li>
+                        </ul>
+                    </div>
+                    <div class="art-main-btn-container">
+                        <button class="primarybtn">See Project</button>
+                    </div>
+                </div>
+
+                <div class="professional_art_printing-section-items">
+                    <div class="art_print_container">
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <p class="art_print_paragraph">
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="art_print_btn_container">
+                            <li><button class="transparent-btn">HTML</button></li>
+                            <li><button class="transparent-btn">Bootstrap</button></li>
+                            <li><button class="transparent-btn">Ruby</button></li>
+                        </ul>
+                    </div>
+                    <div class="art-main-btn-container">
+                        <button class="primarybtn">See Project</button>
+                    </div>
+                </div>
+            </section>
         </section>
-
-        <!-- PROFESSION ART PRINTING -->
-        <section class="professional_art_printing-section">
-            <div class="professional_art_printing-section-items">
-                <div class="art_print_container">
-                    <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                    <p class="art_print_paragraph">
-                        A daily selection of privately personalized reads; no accounts or
-                        sign-ups required. Has been the industry's standard.
-                    </p>
-                    <ul class="art_print_btn_container">
-                        <li><button class="transparent-btn">HTML</button></li>
-                        <li><button class="transparent-btn">Bootstrap</button></li>
-                        <li><button class="transparent-btn">Ruby</button></li>
-                    </ul>
-                </div>
-                <div class="art-main-btn-container">
-                    <button class="primarybtn">See Project</button>
-                </div>
-            </div>
-
-            <div class="professional_art_printing-section-items">
-                <div class="art_print_container">
-                    <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                    <p class="art_print_paragraph">
-                        A daily selection of privately personalized reads; no accounts or
-                        sign-ups required. Has been the industry's standard.
-                    </p>
-                    <ul class="art_print_btn_container">
-                        <li><button class="transparent-btn">HTML</button></li>
-                        <li><button class="transparent-btn">Bootstrap</button></li>
-                        <li><button class="transparent-btn">Ruby</button></li>
-                    </ul>
-                </div>
-                <div class="art-main-btn-container">
-                    <button class="primarybtn">See Project</button>
-                </div>
-            </div>
-
-            <div class="professional_art_printing-section-items">
-                <div class="art_print_container">
-                    <h2 class="art_print_header">Profesional Art Printing Data</h2>
-                    <p class="art_print_paragraph">
-                        A daily selection of privately personalized reads; no accounts or
-                        sign-ups required. Has been the industry's standard.
-                    </p>
-                    <ul class="art_print_btn_container">
-                        <li><button class="transparent-btn">HTML</button></li>
-                        <li><button class="transparent-btn">Bootstrap</button></li>
-                        <li><button class="transparent-btn">Ruby</button></li>
-                    </ul>
-                </div>
-                <div class="art-main-btn-container">
-                    <button class="primarybtn">See Project</button>
-                </div>
-            </div>
-        </section>
-    </div>
+    </section>
 
     <!-- DARK SECTION -->
     <section class="dark_section">
@@ -168,7 +176,7 @@
                 </p>
 
                 <div class="aboutme_button_container">
-                    <button class="primarybtn">Get my resume</button>
+                    <button class="smallprimarybtn">Get my resume</button>
                 </div>
                 <hr class="aboutme_line" />
             </div>
@@ -178,7 +186,7 @@
         <section class="languages_section">
             <div class="skills_container">
                 <div class="flex-header">
-                    <img class="header_icon" src="/Assets/logos/Rectangle 55.png" alt="" />
+                    <div class="rectangle_icon"></div>
                     <span class="language_label">Language</span>
                 </div>
                 <ul class="skill_list_ul">
@@ -190,7 +198,7 @@
             </div>
             <div class="skills_container">
                 <div class="flex-header">
-                    <img class="header_icon" src="/Assets/logos/square.png" alt="" />
+                    <div class="square_icon"></div>
                     <span class="language_label">Frameworks</span>
                 </div>
                 <ul class="skill_list_ul">
@@ -202,7 +210,7 @@
             </div>
             <div class="skills_container">
                 <div class="flex-header">
-                    <img class="header_icon" src="/Assets/logos/ball.png" alt="" />
+                    <div class="ball_icon"></div>
                     <span class="language_label">Skills</span>
                 </div>
                 <ul class="skill_list_ul">
@@ -226,37 +234,40 @@
                 touch.
             </p>
 
-            <form class="comment_form">
-                <input class="textinput" type="text" placeholder="Full Name" /> <br />
-                <input class="textinput" type="email" placeholder="Email address" /><br />
-                <textarea class="textinput_textarea" name="" id="" cols="30" rows="8"></textarea>
-            </form>
-            <div class="form_btn_container">
-                <button class="primarybtn">Get in touch</button>
+            <div class="form_container">
+                <form class="comment_form">
+                    <input class="textinput" type="text" placeholder="Full Name" /> <br />
+                    <input class="textinput" type="email" placeholder="Email address" /><br />
+                    <textarea class="textinput_textarea" name="" id="" cols="10" rows="5"
+                        placeholder="Write me something..."></textarea>
+                </form>
+                <div class="form_btn_container">
+                    <button class="miniprimarybtn">Get in touch</button>
+                </div>
             </div>
         </div>
 
-        <hr class="form_section_line" />
-        <div class="form_icon_container">
-            <ul class="icon-container">
-                <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/githubicon.svg" alt="" /></a>
-                </li>
-                <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/linkin.svg" alt="" /></a>
-                </li>
-                <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/fingers.svg" alt="" /></a>
-                </li>
-                <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/bird.svg" alt="" /></a>
-                </li>
-                <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/letterM.svg" alt="" /></a>
-                </li>
-            </ul>
-        </div>
+
     </section>
+    <div class="form_icon_container">
+        <ul class="footer_icon-container">
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/githubicon.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/linkin.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/fingers.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/bird.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/letterM.svg" alt="" /></a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
