--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto:wght@700&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -45,9 +45,9 @@
                 <h1 class="h5">Hey There. I’m Life.</h1>
                 <h6 class="h6">I'm a Software Developer</h6>
                 <p class="hero-paragraph">
-                    I can help you build a product , feature or website Look through some
-                    of my work and experience! If you like what you see and have a project
-                    you need coded, don’t hesitate to contact me.
+                    I can help you build a product , feature or website Look through
+                    some of my work and experience! If you like what you see and have a
+                    project you need coded, don’t hesitate to contact me.
                 </p>
             </div>
 
@@ -81,13 +81,13 @@
                 <img class="middlesection-image" src="./Assets/images/middlesectionimage.png" alt="" />
             </div>
             <h3 class="multiples-stories_header">Multi-Post Stories</h3>
-            <p class="multiples-stories_paragraph">A daily selection of privately personalized reads;
-                no accounts or sign-ups required. has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a standard dummy text.
+            <p class="multiples-stories_paragraph">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard dummy text ever
+                since the 1500s, when an unknown printer took a standard dummy text.
             </p>
             <section class="button-flex">
                 <ul class="buttons">
-
                     <li><button class="default-btn">CSS</button></li>
                     <li><button class="default-btn">HTML</button></li>
                     <li><button class="default-btn">Bootstrap</button></li>
@@ -100,8 +100,6 @@
             </div>
         </setion>
 
-
-
         <section class="card-section">
             <!-- PROFESSION ART PRINTING -->
             <section class="professional_art_printing-section">
@@ -109,8 +107,8 @@
                     <div class="art_print_container">
                         <h2 class="art_print_header">Profesional Art Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized reads; no accounts or
-                            sign-ups required. Has been the industry's standard.
+                            A daily selection of privately personalized reads; no accounts
+                            or sign-ups required. Has been the industry's standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -127,8 +125,8 @@
                     <div class="art_print_container">
                         <h2 class="art_print_header">Profesional Art Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized reads; no accounts or
-                            sign-ups required. Has been the industry's standard.
+                            A daily selection of privately personalized reads; no accounts
+                            or sign-ups required. Has been the industry's standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -145,8 +143,8 @@
                     <div class="art_print_container">
                         <h2 class="art_print_header">Profesional Art Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized reads; no accounts or
-                            sign-ups required. Has been the industry's standard.
+                            A daily selection of privately personalized reads; no accounts
+                            or sign-ups required. Has been the industry's standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -236,18 +234,17 @@
 
             <div class="form_container">
                 <form class="comment_form">
-                    <input class="textinput" type="text" placeholder="Full Name" /> <br />
+                    <input class="textinput" type="text" placeholder="Full Name" />
+                    <br />
                     <input class="textinput" type="email" placeholder="Email address" /><br />
                     <textarea class="textinput_textarea" name="" id="" cols="10" rows="5"
                         placeholder="Write me something..."></textarea>
+                    <div class="form_btn_container">
+                        <button class="miniprimarybtn">Get in touch</button>
+                    </div>
                 </form>
-                <div class="form_btn_container">
-                    <button class="miniprimarybtn">Get in touch</button>
-                </div>
             </div>
         </div>
-
-
     </section>
     <div class="form_icon_container">
         <ul class="footer_icon-container">
