add maxlength fullname input

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
             <div class="form_container">
                 <form class="comment_form">
-                    <input class="textinput" type="text" placeholder="Full Name" />
+                    <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30" required />
                     <br />
                     <input class="textinput" type="email" placeholder="Email address" /><br />
                     <textarea class="textinput_textarea" name="" id="" cols="10" rows="5"
