modify html text area

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                     <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30" required />
                     <br />
                     <input class="textinput" type="email" placeholder="Email address" /><br />
-                    <textarea class="textinput_textarea" name="" id="" cols="10" rows="5"
-                        placeholder="Write me something..."></textarea>
+                    <textarea class="textinput_textarea" name="message" id="user-message" cols="10" rows="5"
+                        placeholder="Write me something..." maxlength="500"></textarea>
                     <div class="form_btn_container">
                         <button class="miniprimarybtn">Get in touch</button>
                     </div>
