--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
             </p>
 
             <div class="form_container">
-                <form class="comment_form">
+                <form class="comment_form" action="https://formspree.io/f/xgebnddl" method="POST">
                     <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30" required />
                     <br />
-                    <input class="textinput" type="email" placeholder="Email address" /><br />
+                    <input class="textinput" type="email" name="email" placeholder="Email address" required /><br />
                     <textarea class="textinput_textarea" name="message" id="user-message" cols="10" rows="5"
-                        placeholder="Write me something..." maxlength="500"></textarea>
+                        placeholder="Write me something..." maxlength="500" required></textarea>
                     <div class="form_btn_container">
                         <button class="miniprimarybtn">Get in touch</button>
                     </div>
