correct the html file conflict

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                 <h1 class="h5">Hey There. I’m Life.</h1>
                 <h6 class="h6">I'm a Software Developer</h6>
                 <p class="hero-paragraph">
-                    I can help you build a product , feature or website Look through
-                    some of my work and experience! If you like what you see and have a
+                    I can help you build a product , feature or website Look
+                    through
+                    some of my work and experience! If you like what you see
+                    and have a
                     project you need coded, don’t hesitate to contact me.
                 </p>
             </div>
@@ -76,15 +78,17 @@
         <setion class="middlesection">
             <div class="middlesection-container">
                 <h2 class="middlesection_header_title">My Recent Works</h2>
-
                 <hr />
                 <img class="middlesection-image" src="./Assets/images/middlesectionimage.png" alt="" />
             </div>
             <h3 class="multiples-stories_header">Multi-Post Stories</h3>
             <p class="multiples-stories_paragraph">
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required. has been the industry's standard dummy text ever
-                since the 1500s, when an unknown printer took a standard dummy text.
+                A daily selection of privately personalized reads; no
+                accounts or
+                sign-ups required. has been the industry's standard dummy
+                text ever
+                since the 1500s, when an unknown printer took a standard
+                dummy text.
             </p>
             <section class="button-flex">
                 <ul class="buttons">
@@ -105,10 +109,13 @@
             <section class="professional_art_printing-section">
                 <div class="professional_art_printing-section-items">
                     <div class="art_print_container">
-                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <h2 class="art_print_header">Profesional Art
+                            Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized reads; no accounts
-                            or sign-ups required. Has been the industry's standard.
+                            A daily selection of privately personalized
+                            reads; no accounts
+                            or sign-ups required. Has been the industry's
+                            standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -123,10 +130,13 @@
 
                 <div class="professional_art_printing-section-items">
                     <div class="art_print_container">
-                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <h2 class="art_print_header">Profesional Art
+                            Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized reads; no accounts
-                            or sign-ups required. Has been the industry's standard.
+                            A daily selection of privately personalized
+                            reads; no accounts
+                            or sign-ups required. Has been the industry's
+                            standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -141,10 +151,13 @@
 
                 <div class="professional_art_printing-section-items">
                     <div class="art_print_container">
-                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <h2 class="art_print_header">Profesional Art
+                            Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized reads; no accounts
-                            or sign-ups required. Has been the industry's standard.
+                            A daily selection of privately personalized
+                            reads; no accounts
+                            or sign-ups required. Has been the industry's
+                            standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -167,9 +180,12 @@
             <div class="aboutme_container">
                 <h3 class="aboutme_header_text">About me</h3>
                 <p class="aboutme_paragraph">
-                    Hello I’m a software developer! I can help you build a product ,
-                    feature or website Look through some of my work and experience! If
-                    you like what you see and have a project you need coded, don’t
+                    Hello I’m a software developer! I can help you build a
+                    product ,
+                    feature or website Look through some of my work and
+                    experience! If
+                    you like what you see and have a project you need coded,
+                    don’t
                     hesitate to contact me.
                 </p>
 
@@ -227,7 +243,8 @@
         <div class="form_section_container">
             <p class="form_section_text">
                 I'm always <br />
-                interested in hearing about new projects, so if you'd like to chat
+                interested in hearing about new projects, so if you'd like
+                to chat
                 please get in <br />
                 touch.
             </p>
@@ -235,6 +252,7 @@
             <div class="form_container">
                 <form class="comment_form" action="https://formspree.io/f/xgebnddl" method="POST">
                     <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30" required />
+                    <br />
                     <input class="textinput" type="email" name="email" placeholder="Email address" required /><br />
                     <textarea class="textinput_textarea" name="message" id="user-message" cols="10" rows="5"
                         placeholder="Write me something..." maxlength="500" required></textarea>
