add action to my form again

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
             </div>
 
             <div class="form_container">
-                <form class="form_container">
-                    <div class="comment_form" action="https://formspree.io/f/xgebnddl" method="POST">
+                <form class="form_container" action="https://formspree.io/f/xgebnddl" method="POST">
+                    <div class="comment_form">
                         <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30"
                             required />
                         <input class="textinput" type="email" name="email" placeholder="Email address" required /><br />
