--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 
             <ul class="icon-container">
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="icon" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="image-icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="icon" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="image-icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="icon" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="image-icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/twitter.png" alt="icon" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/twitter.png" alt="image-icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/letterM.png" alt="icon" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/letterM.png" alt="image-icon" /></a>
                 </li>
             </ul>
         </div>
