--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <!-- NAVBAR -->
+
     <header>
         <nav class="navbar">
             <div class="navbar-innercontainer">
@@ -196,21 +197,23 @@
                 </div>
 
                 <div class="form_container" id="contact">
-                    <form class="form_container" action="https://formspree.io/f/xgebnddl" method="POST">
+                    <form class="form_container" action="https://formspree.io/f/xgebnddl" method="POST" id="form">
                         <div class="comment_form">
                             <label for="textinput" class="label"></label>
                             <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30"
                                 required />
                             <label for="textinput" class="label"></label>
-                            <input class="textinput" type="email" name="email" placeholder="Email address"
+                            <input class="textinput" type="email" id="email" name="email" placeholder="Email address"
                                 required /><br />
                             <label for="textinput" class="label"></label>
                             <textarea class="textinput_textarea" name="message" id="user-message" cols="10" rows="5"
                                 placeholder="Write me something..." maxlength="500" required></textarea>
 
                         </div>
+                        <div id="errorMessage"></div>
+                        <div id="successMsg"></div>
                         <div class="form_btn_container">
-                            <button class="miniprimarybtn">Get in touch</button>
+                            <button class="miniprimarybtn" id="submitBtn">Get in touch</button>
                         </div>
                     </form>
                 </div>
